--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "type-challenges",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/aRidiculousBoy/type-challenges/issues"
   },
-  "homepage": "https://github.com/aRidiculousBoy/type-challenges#readme"
+  "homepage": "https://github.com/aRidiculousBoy/type-challenges#readme",
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@type-challenges/utils": "^0.1.1"
+  }
 }
